--- a/index.html
+++ b/index.html
@@ -8,7 +8,38 @@
     <title>Sushi</title>
   </head>
   <body>
-    <h1>Sushi</h1>
+    <header>
+      <nav class="header__nav">
+        <div class="header__logo">
+          <h4>Sushi</h4>
+          <div class="header__logo-overlay"></div>
+        </div>
+
+        <ul class="header__menu">
+          <li>
+            <a href="#menu">Menu</a>
+          </li>
+          <li>
+            <a href="#food">Food</a>
+          </li>
+          <li>
+            <a href="#service">Service</a>
+          </li>
+          <li>
+            <a href="#about-us">About Us</a>
+          </li>
+          <li>
+            <img src="./assets/search.svg" alt="search" />
+          </li>
+        </ul>
+
+        <ul class="header__menu-mobile">
+          <li>
+            <img src="./assets/menu.svg" alt="men" />
+          </li>
+        </ul>
+      </nav>
+    </header>
     <script src="./js/script.js" type="module"></script>
   </body>
 </html>
