--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="hero-content__testimonial">
-          <div class="hero-content__customer flex-center">
+          <div class="hero-content__customer">
             <h4>24 <span>4k+</span></h4>
             <p>Happy Customers</p>
           </div>
