--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <header>
       <nav class="header__nav">
         <div class="header__logo">
-          <h4>Sushi</h4>
+          <!-- This how we use aos. Simply specify the type of animation using data attribute -->
+          <h4 data-aos="fade-down">Sushiman</h4>
+
           <div class="header__logo-overlay"></div>
         </div>
 
-        <ul class="header__menu">
+        <ul class="header__menu" data-aos="fade-down">
           <li>
             <a href="#menu">Menu</a>
           </li>
@@ -23,28 +25,36 @@
             <a href="#food">Food</a>
           </li>
           <li>
-            <a href="#service">Service</a>
+            <a href="#services">Services</a>
           </li>
           <li>
             <a href="#about-us">About Us</a>
           </li>
           <li>
-            <img src="./assets/search.svg" alt="search" />
+            <img src="assets/search.svg" alt="search" />
           </li>
         </ul>
 
-        <ul class="header__menu-mobile">
+        <!-- Display Menu icon on small devices -->
+        <ul class="header__menu-mobile" data-aos="fade-down">
           <li>
-            <img src="./assets/menu.svg" alt="men" />
+            <img src="assets/menu.svg" alt="search" />
           </li>
         </ul>
       </nav>
     </header>
+    <!-- END: header -->
 
+    <!-- START: hero -->
     <section class="hero">
       <div class="hero-image">
-        <img src="./assets/sushi-1.png" alt="sushi" />
-        <h2>
+        <img
+          src="assets/sushi-1.png"
+          alt="sushi-1"
+          data-aos="fade-up"
+          data-aos-anchor-placement="top-bottom"
+        />
+        <h2 data-aos="fade-up">
           日 <br />
           本 <br />
           食
@@ -53,57 +63,59 @@
         <div class="hero-image__overlay"></div>
       </div>
       <div class="hero-content">
-        <div class="hero-content-info">
-          <h1>Feel the taste of Japanese food</h1>
+        <div class="hero-content-info" data-aos="fade-left">
+          <h1>Feel the taste of Japanese foods</h1>
           <p>
-            Feel the taste of the most popular Japanese food from anywhere and
+            Feel the taste of the most popular Japanese foods from anywhere and
             anytime.
           </p>
 
           <div class="hero-content__buttons">
             <button class="hero-content__order-button">Order Now</button>
             <button class="hero-content__play-button">
-              <img src="./assets/play-circle.svg" alt="play" />
+              <img src="assets/play-circle.svg" alt="play-circle" />
               How to Order
             </button>
           </div>
         </div>
 
-        <div class="hero-content__testimonial">
-          <div class="hero-content__customer">
-            <h4>24 <span>4k+</span></h4>
+        <div class="hero-content__testimonial" data-aos="fade-up">
+          <div class="hero-content__customer flex-center">
+            <h4>24<span>k+</span></h4>
             <p>Happy Customers</p>
           </div>
 
           <div class="hero-content__review">
-            <img src="./assets/user.png" alt="user" />
+            <img src="assets/user.png" alt="user" />
             <p>
-              "This is the best Japanese food delivery service that ever
-              existed."
+              “This is the best Japanese food delivery service that ever
+              existed.”
             </p>
           </div>
         </div>
       </div>
     </section>
+    <!-- END: hero -->
 
+    <!-- START: about us -->
     <section class="about-us" id="about-us">
       <div class="about-us__image">
         <div class="about-us__image-sushi3">
-          <img src="./assets/sushi-3.png" alt="sushi" />
+          <img src="assets/sushi-3.png" alt="sushi-3" data-aos="fade-right" />
         </div>
 
         <button class="about-us__button">
           Learn More
 
-          <img src="./assets/arrow-up-right.svg" alt="learn-more " />
+          <img src="assets/arrow-up-right.svg" alt="arrow_up_right" />
         </button>
 
         <div class="about-us__image-sushi2">
-          <img src="./assets/sushi-2.png" alt="sushi" />
+          <img src="assets/sushi-2.png" alt="sushi-2" data-aos="fade-right" />
         </div>
       </div>
 
-      <div class="about-us__content">
+      <div class="about-us__content" data-aos="fade-left">
         <p class="sushi__subtitle">About Us / 私たちに関しては</p>
         <h3 class="sushi__title">
           Our mission is to bring true Japanese flavours to you.
@@ -115,7 +127,9 @@
         </p>
       </div>
     </section>
+    <!-- END: about us -->
 
+    <!-- START: popular foods -->
     <section class="popular-foods" id="menu">
       <h2 class="popular-foods__title" data-aos="flip-up">
         Popular Food / 人気
@@ -164,6 +178,7 @@
           </div>
         </article>
 
+        <!-- active big white card -->
         <article class="popular-foods__card active-card">
           <img
             class="popular-foods__card-image"
@@ -205,6 +220,139 @@
         Explore Food
         <img src="assets/arrow-right.svg" alt="arrow-right" />
       </button>
+    </section>
+    <!-- END: popular foods -->
+
+    <section class="trending" id="food">
+      <!-- START: trending sushi -->
+      <section class="trending-sushi">
+        <div class="trending__content" data-aos="fade-right">
+          <p class="sushi__subtitle">What’s Trending / トレンド</p>
+
+          <h3 class="sushi__title">Japanese Sushi</h3>
+          <p class="sushi__description">
+            Feel the taste of the most delicious Sushi here.
+          </p>
+
+          <ul class="trending__list flex-between">
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Make Sushi</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Nigiri Sushi</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Oshizushi</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Temaki Sushi</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Uramaki Sushi</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Inari Sushi</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="trending__image flex-center">
+          <img src="assets/sushi-5.png" alt="sushi-5" data-aos="fade-left" />
+
+          <div class="trending__arrow trending__arrow-left">
+            <img src="assets/arrow-vertical.svg" alt="arrow-vertical" />
+          </div>
+
+          <div class="trending__arrow trending__arrow-bottom">
+            <img src="assets/arrow-horizontal.svg" alt="arrow-horizontal" />
+          </div>
+        </div>
+      </section>
+      <!-- END: trending sushi -->
+
+      <div class="trending__discover" data-aos="zoom-in">
+        <p>Discover</p>
+      </div>
+
+      <section class="trending-drinks">
+        <div class="trending__image flex-center">
+          <img src="assets/sushi-4.png" alt="sushi-4" data-aos="fade-right" />
+
+          <div class="trending__arrow trending__arrow-top">
+            <img src="assets/arrow-horizontal.svg" alt="arrow horizontal" />
+          </div>
+
+          <div class="trending__arrow trending__arrow-right">
+            <img src="assets/arrow-vertical.svg" alt="arrow vertical" />
+          </div>
+        </div>
+
+        <div class="trending__content" data-aos="fade-left">
+          <p class="sushi__subtitle">What’s Trending / トレンド</p>
+
+          <h3 class="sushi__title">Japanese Drinks</h3>
+          <p class="sushi__description">
+            Feel the taste of the most delicious Japense drinks here.
+          </p>
+
+          <ul class="trending__list flex-between">
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Oruncha</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Sakura Tea</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Aojiru</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Ofukucha</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Kombu-cha</p>
+            </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Mugicha</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </section>
 
     <script src="./js/script.js" type="module"></script>
