--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="header__nav">
         <div class="header__logo">
           <!-- This how we use aos. Simply specify the type of animation using data attribute -->
-          <h4 data-aos="fade-down">Sushiman</h4>
+          <h4 data-aos="fade-down">Sushi</h4>
 
           <div class="header__logo-overlay"></div>
         </div>
@@ -361,7 +361,7 @@
         Get offers straight <br />
         to your inbox
       </h2>
-      <p data-aos="fade-up">Sign up for the Sushiman newsletter</p>
+      <p data-aos="fade-up">Sign up for the Sushi newsletter</p>
 
       <div class="subscription__form" data-aos="fade-up">
         <input type="text" placeholder="Enter email address" />
@@ -369,6 +369,39 @@
       </div>
     </section>
     <!-- END: subscribe -->
+
+    <!-- START: footer -->
+    <footer class="footer flex-between">
+      <h3 class="footer__logo"><span>Sushi</span></h3>
+
+      <ul class="footer__nav">
+        <li>
+          <a href="#menu">Menu</a>
+        </li>
+        <li>
+          <a href="#food">Food</a>
+        </li>
+        <li>
+          <a href="#services">Services</a>
+        </li>
+        <li>
+          <a href="#about-us">About us</a>
+        </li>
+      </ul>
+
+      <ul class="footer__social">
+        <li class="flex-center">
+          <img src="assets/facebook.svg" alt="facebook" />
+        </li>
+        <li class="flex-center">
+          <img src="assets/twitter.svg" alt="twitter" />
+        </li>
+        <li class="flex-center">
+          <img src="assets/instagram.svg" alt="instagram" />
+        </li>
+      </ul>
+    </footer>
+    <!-- END: footer -->
 
     <script src="./js/script.js" type="module"></script>
   </body>
